# driveLM-RAG

./: .gitignore  LICENSE  README.md  pyproject 2.toml  pyproject.toml  requirements.txt  setup.sh
resources/: prompt_template.yaml
resources/output/: drive_lm_with_lm_outputs.json  nusciences_processed.json
src/: drive_lm_rag.py
src/analysis/: README.md  analyze_drive_lm.ipynb  analyze_drive_lm.py  analyze_nucenes.py  analyze_nuscenes.ipynb  analyze_rag.py
src/encoders/: encode_images.py  encoder.py  faiss.py
src/inference/: README.md  inference.py  local_lm_inference.py  open_ai_inference.py
src/preprocess/: create_nuscenes_index.py
src/util/: data_types.py  load_file.py  prompter.py
