[project]
name = "drivelm-rag"
version = "0.1.0"
description = ""
authors = [
    {name = "Rohit Upadhya",email = "rohitupadhya18@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib (>=3.10.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.8"
isort = "^6.0.1"
pytest = "^8.4.1"

